<resources>
    <string name="app_name">SchedulerV8</string>
    <string name="main_screen_terms_button_text">Terms</string>
    <string name="main_screen_courses_button_text">Courses</string>
    <string name="main_screen_assessments_button_text">Assessments</string>
    <string name="term_name">Term Name: </string>
    <string name="enter_term_name">Enter Term Name</string>
    <string name="term_start_date">Term Start Date: </string>
    <string name="term_end_date">Term End Date: </string>
    <string name="date_hint_text">Enter Date</string>
    <string name="save_button">Save</string>
    <string name="new_term_courses_msg">Note: To add courses to a term use Course interface. To remove courses from Term, use Term Details interface.</string>
    <string name="remove_term_button">Delete Term</string>
    <string name="term_ID_label">Term ID: </string>
    <string name="no_terms_item">No Terms</string>
    <string name="term_list_fab_desc">Add New Term</string>
    <string name="addNewTermIdLabel">Term ID: </string>
    <string name="NewTermIDHintText">Term ID generated by Database</string>
    <string name="NewTermNameHintText">Enter Term Name</string>
    <string name="NewTermStartDateHint">Select Start Date</string>
    <string name="NewTermEndDateHint">Select End Date</string>
    <string name="notAvail">N/A</string>
    <string name="addCourseSpinnerLabel">Add Course to Term: </string>
    <string name="removeCourseSpinnerLabel">Remove Course from Term: </string>
    <string name="courseId_Label">Course ID: </string>
    <string name="new_courseId_hint">Course ID generated by Database</string>
    <string name="course_name_label">Course Name: </string>
    <string name="new_course_name_hint">Enter Course Name</string>
    <string name="course_start_date_label">Course Start Date: </string>
    <string name="course_end_date_label">Course End Date: </string>
    <string name="new_course_start_date_hint">Select Start Date</string>
    <string name="new_course_end_date_hint">Select End Date</string>
    <string name="courseStatusLabel">Course Status: </string>
    <string name="course_instructor_name">Instructor Name: </string>
    <string name="new_course_I_name_hint">Enter Instructor Name</string>
    <string name="course_instructor_phone">Instructor Phone Number: </string>
    <string name="new_course_I_phone_hint">Enter Phone Number</string>
    <string name="course_instructor_email">Instructor Email: </string>
    <string name="new_course_I_email_hint">Enter Email </string>
    <string name="course_note_label">Course Notes: </string>
    <string name="new_course_note_hint">Enter Notes about the course here.</string>
    <string name="courseDetailsAssessLabel">Assessments: </string>
    <string name="termDetailsCoursesLabel">Courses: </string>
    <string name="remove_course_button">Remove Course</string>
    <string name="add_course_button">Add Course</string>
    <string name="add_assess_button">Add Assessment</string>
    <string name="assess_name_label">Assessment Name: </string>
    <string name="assess_name_hint">Enter Assessment Name</string>
    <string name="assess_start_date">Assessment Start Date: </string>
    <string name="assess_end_date">Assessment End Date: </string>
    <string name="assess_type_Label">Assessment Type: </string>
    <string name="assess_ID_label">Assessment ID: </string>
    <string name="remove_assess_button">Delete Assessment</string>
    <string name="add_sample_data">Add Sample Data</string>
    <string name="auto_generated">Auto-generated</string>
    <string name="total_courses_label">Total Courses: </string>
    <string name="synchronous_count_label">SYNCHRONOUS: </string>
    <string name="asynchronous_count_label">ASYNCHRONOUS: </string>
    <string name="reports_recycler_view_label">User Data Table: </string>

    <string name="channel_name">Scheduler Channel</string>
    <string name="channel_description">Notifications for Scheduler App</string>

    <string-array name="course_status_array">
        <item>IN PROGRESS</item>
        <item>COMPLETED</item>
        <item>DROPPED</item>
        <item>PLAN TO TAKE</item>
    </string-array>

    <string-array name="assessment_type_array">
        <item>OBJECTIVE</item>
        <item>PERFORMANCE</item>
    </string-array>

    <string-array name="course_type_array">
        <item>SYNCHRONOUS</item>
        <item>ASYNCHRONOUS</item>
        <item>Select Value</item>
    </string-array>

    <string-array name="sync_meeting_times_array">
        <item>MWF 9:00–11:00AM PST</item>
        <item>TuTh 8:00–11:00AM PST</item>
        <item>MWF 2:00–4:00PM PST</item>
        <item>TuTh 1:00–4:00PM PST</item>
        <item>MWF 7:00–9:00PM PST</item>
        <item>TuTh 6:00–9:00PM PST</item>
    </string-array>

    <string-array name="live_support_available_array">
        <item>YES</item>
        <item>NO; See additional resources.</item>
    </string-array>

    <string-array name="live_support_times_array">
        <item>MWF 10:00AM-1:00PM PST</item>
        <item>MWF 5:00PM-8:00PM PST</item>
        <item>Saturday 12:00PM-4:00PM PST</item>
        <item>Sunday 5:00PM-9:00PM PST</item>
    </string-array>

</resources>