<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="101dp"
        android:layout_height="98dp"
        android:src="@drawable/baseline_access_time_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias=".05" />

    <TextView
        android:id="@+id/mainScreenTitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/mainScreenTermsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_screen_terms_button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainScreenTitleText"
        app:layout_constraintVertical_bias="0.05" />

    <Button
        android:id="@+id/mainScreenCoursesButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_screen_courses_button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainScreenTermsButton"
        app:layout_constraintVertical_bias=".01" />

    <Button
        android:id="@+id/mainScreenAssessmentsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_screen_assessments_button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainScreenCoursesButton"
        app:layout_constraintVertical_bias=".01" />

    <Button
        android:id="@+id/reportsButtonAdminOnly"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Reports"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainScreenAssessmentsButton"
        app:layout_constraintVertical_bias="0.1" />

    <Button
        android:id="@+id/logoutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Logout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reportsButtonAdminOnly" />
</androidx.constraintlayout.widget.ConstraintLayout>